# zero-shot-ai-agents

./: .gitignore  FIXES_APPLIED.md  README.md  TEST_EXPERIMENT.md  env.example  pyproject.toml  run_experiments.sh
data/: cavernstack_experiments.csv  cavernstack_summary.csv  ideas.csv  test_hello.csv  test_providers.csv
docs/: COMPLETION_REPORT.md  CSV_FORMAT.md  IMPLEMENTATION_SUMMARY.md  PROVIDER_COMPARISON.md  QUICKSTART.md  README.md  TEST.md  plan.md
providers/augment/: AGENTS.md  AUGMENT_ISSUES.md  orchestrator.py  requirements.txt
providers/augment/templates/: experiments.yaml  harness.py  workflow.yml
providers/cosine/: COSINE_LIMITATIONS.md  orchestrator.py
providers/cosine/templates/: executor.py  experiments.yaml  workflow.yml
providers/jules/: AGENTS.md  orchestrator.py  requirements.txt
providers/jules/templates/: experiments.yaml  runner.py  workflow.yml
providers/openhands/: AGENTS.md  orchestrator.py
providers/openhands/templates/: experiments.yaml  microagent_repo.md  runner.py  workflow.yml
tests/integration/: test_csv_parsing.py  test_env.py  test_github.py  test_github_create.py  test_github_list.py  test_github_putfile.py  test_yaml_validation.py
tests/providers/: test_jules_api.py  test_load_ideas.py  test_openhands_api.py  test_single_run.csv  test_single_run.py
